@@ -382,6 +382,10 @@ the directory statistics file.
 .BI "--num-retries " number
 Number of retries to make on errors before giving up.
 .TP
+.B --old-filenames
+Use the old filename format (incompatible with Windows/Samba) rather than
+the new filename format.
+.TP
 .BI "--s3-european-buckets"
 When using the Amazon S3 backend, create buckets in Europe instead of
 the default (requires
