@@ -1,7 +1,9 @@
+*.log
 *.pyc
 .cvsignore
 config.py
-run-all-tests.log
 testfiles
 coverage
 counts
+test-25308.sh
+test-swap-old-new.sh
