@@ -1,5 +1,8 @@
 New in v0.5.10 (2009/03/??)
 ---------------------------
+bug #19988: Incompatibility to Samba/SMB share
+https://savannah.nongnu.org/bugs/?19988
+
 Bug #229826: duplicity crashed with ValueError in port()
 https://bugs.launchpad.net/duplicity/+bug/229826
 
